--- a/pages/7415.html
+++ b/pages/7415.html
@@ -8,13 +8,14 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="robots" content="index,follow" />
-  
- 
-  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+
+
+  <link href="/stylesheets/instiki.css?1534097725" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/mathematics.css?1534319116" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
-    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
-      color: #008B26; 
+    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 {
+      color: #008B26;
     }
     a:visited.existingWikiWord {
       color: #005c19;
@@ -23,7 +24,7 @@
     
   </style>
   
-  <style type="text/css"><!--/*--><![CDATA[/*><!--*/    
+  <style type="text/css"><!--/*--><![CDATA[/*><!--*/
     .toc ul {margin: 0; padding: 0;}
 .toc ul ul {margin: 0; padding: 0 0 0 10px;}
 .toc li > p {margin: 0}
@@ -301,23 +302,20 @@ margin-left: 0em;
 </form>  <span id='navEnd'></span>
 </div>
 
-<div>
-  <p style="color: red">
-    The nLab and nForum are expected to be down for several hour periods between 08:00 UTC on the 11th of August and 04:00 UTC on the 12th of August, due to maintenance at Carnegie Mellon University which will lead to loss of power where the nLab server resides. Apologies for the inconvenience.
-  </p>
-</div>
-
 
 
 
 
 
 <div id="revision">
-      <h2 id='subtitle_a_sketch_of_a_programme'>Subtitle: a sketch of a programme</h2>
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<body>
+<h2 id="subtitle_a_sketch_of_a_programme">Subtitle: a sketch of a programme</h2>
 
-<p>This was a document produced by <a class='existingWikiWord' href='/nlab/show/Alexander+Grothendieck'>Alexander Grothendieck</a> that outline a series of interrelated research projects, (see the <a href='http://en.wikipedia.org/wiki/Esquisse_d%27un_Programme'>Wikipedia page</a>).</p>
+<p>This was a document produced by <a class="existingWikiWord" href="/nlab/show/Alexander+Grothendieck">Alexander Grothendieck</a> that outline a series of interrelated research projects, (see the <a href="http://en.wikipedia.org/wiki/Esquisse_d%27un_Programme">Wikipedia page</a>).</p>
 
-<h3 id='summary_of_grothendiecks_programme'>Summary of Grothendieck’s programme</h3>
+<h3 id="summary_of_grothendiecks_programme">Summary of Grothendieck’s programme</h3>
 
 <p>(English translation with original in brackets.)</p>
 
@@ -329,13 +327,13 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>“Teichmüller’s Lego-game and the <a class='existingWikiWord' href='/nlab/show/Galois+group'>Galois group</a> of Q over Q” (“Un jeu de ”Lego-Teichmüller“ et le groupe de Galois de Q sur Q”).</p>
+<p>“Teichmüller’s Lego-game and the <a class="existingWikiWord" href="/nlab/show/Galois+group">Galois group</a> of Q over Q” (“Un jeu de ”Lego-Teichmüller“ et le groupe de Galois de Q sur Q”).</p>
 
-<p>(on the relation between the <a class='existingWikiWord' href='/nlab/show/absolute+Galois+group'>absolute Galois group</a> and the <a class='existingWikiWord' href='/nlab/show/Grothendieck-Teichm%C3%BCller+group'>Grothendieck-Teichmüller group</a>)</p>
+<p>(on the relation between the <a class="existingWikiWord" href="/nlab/show/absolute+Galois+group">absolute Galois group</a> and the <a class="existingWikiWord" href="/nlab/show/Grothendieck-Teichm%C3%BCller+group">Grothendieck-Teichmüller group</a>)</p>
 </li>
 
 <li>
-<p>Number fields associated with “<a class='existingWikiWord' href='/nlab/show/children%27s+drawings'>children&#39;s drawings</a>”. (“Corps de nombres associés à un <a class='existingWikiWord' href='/nlab/show/dessin+d%27enfant'>dessin d&#39;enfant</a>”).</p>
+<p>Number fields associated with “<a class="existingWikiWord" href="/nlab/show/children%27s+drawings">children's drawings</a>”. (“Corps de nombres associés à un <a class="existingWikiWord" href="/nlab/show/dessin+d%27enfant">dessin d'enfant</a>”).</p>
 </li>
 
 <li>
@@ -351,7 +349,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Pursuing+Stacks'>Pursuing Stacks</a> (“À la Poursuite des Champs”}.</p>
+<p><a class="existingWikiWord" href="/nlab/show/Pursuing+Stacks">Pursuing Stacks</a> (“À la Poursuite des Champs”}.</p>
 </li>
 
 <li>
@@ -369,33 +367,39 @@ margin-left: 0em;
 
 <p>Notes</p>
 
-<h2 id='references'>References</h2>
+<h2 id="references">References</h2>
 
 <ul>
 <li>
-<p>A copy of the original version is <a href='http://people.math.jussieu.fr/~leila/grothendieckcircle/EsquisseFr.pdf'>here</a>.</p>
+<p>A copy of the original version is <a href="http://people.math.jussieu.fr/~leila/grothendieckcircle/EsquisseFr.pdf">here</a>.</p>
 </li>
 
 <li>
-<p>An English translation is <a href='http://webusers.imj-prg.fr/~leila.schneps/grothendieckcircle/EsquisseEng.pdf'>here</a>.</p>
+<p>An English translation is <a href="http://webusers.imj-prg.fr/~leila.schneps/grothendieckcircle/EsquisseEng.pdf">here</a>.</p>
 </li>
 
 <li>
-<p><a href='http://mathoverflow.net/q/24900/381'>MO discussion</a></p>
+<p><a href="http://mathoverflow.net/q/24900/381">MO discussion</a></p>
+</li>
+
+<li>
+<p>Notes Anabéliennes de A. Grothendieck <a href="https://github.com/carmonamateo/NotesAnabeliennes">link</a></p>
 </li>
 </ul>
+</body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 10, 2018 at 16:01:50.
+  Last revised on October 28, 2018 at 20:20:13.
   See the <a href="https://ncatlab.org/nlab/history/Esquisse d&#39;un programme" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Esquisse+d%27un+programme" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Esquisse+d%27un+programme/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Esquisse+d%27un+programme" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Esquisse+d%27un+programme" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Esquisse+d%27un+programme" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Esquisse+d%27un+programme/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Esquisse+d%27un+programme" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Esquisse+d%27un+programme" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Esquisse d&#39;un programme/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
