--- a/pages/11578.html
+++ b/pages/11578.html
@@ -321,7 +321,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Project of transcription of <a href="https://github.com/carmonamateo/LaLongueMarche">La “Longue Marche”</a></p>
+<p>Project of transcription of <a href="https://github.com/carmonamateo/NotesAnabeliennes">Notes Anabéliennes</a></p>
 </li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/reference">reference</a></div></body></html>
@@ -330,14 +330,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 13:30:19.
+  Last revised on October 28, 2018 at 20:23:00.
   See the <a href="https://ncatlab.org/nlab/history/Long March" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Long+March" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Long+March/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Long+March" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Long+March" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Long+March" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Long+March/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Long+March" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Long+March" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Long March/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
