--- a/pages/5375.html
+++ b/pages/5375.html
@@ -517,13 +517,7 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Alexandre+Grothendieck">Alexandre Grothendieck</a>, letter to Faltings (June 27, 1983) (<a href="http://www.math.jussieu.fr/~leila/grothendieckcircle/GtoF.pdf">pdf</a>),</li>
 </ul>
 
-<p>written in response to <a class="existingWikiWord" href="/nlab/show/Faltings">Faltings</a>‘ work on the <a class="existingWikiWord" href="/nlab/show/Mordell+Conjecture">Mordell Conjecture</a>, and</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Alexandre+Grothendieck">Alexandre Grothendieck</a>, La Longue Marche à travers la théorie de Galois (<a href="https://github.com/carmonamateo/LaLongueMarche">link</a>),</li>
-</ul>
-
-<p>principally the note:</p>
+<p>written in response to <a class="existingWikiWord" href="/nlab/show/Faltings">Faltings</a>‘ work on the <a class="existingWikiWord" href="/nlab/show/Mordell+Conjecture">Mordell Conjecture</a>, and the note of the <a class="existingWikiWord" href="/nlab/show/Long+March">Long March</a>:</p>
 
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Alexandre+Grothendieck">Alexandre Grothendieck</a>, Notes Anabéliennes (<a href="https://github.com/carmonamateo/NotesAnabeliennes">link</a>).</li>
@@ -622,14 +616,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 12, 2018 at 11:00:27.
+  Last revised on October 28, 2018 at 20:18:39.
   See the <a href="https://ncatlab.org/nlab/history/anabelian geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anabelian+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anabelian+geometry/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/anabelian+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anabelian+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/anabelian+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anabelian+geometry/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/anabelian+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anabelian+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/anabelian geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
