--- a/pages/19888.html
+++ b/pages/19888.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Bert Schellekens in nLab
+      Sadok Kallel in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Bert Schellekens
+      Sadok Kallel
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9205/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -312,23 +312,19 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
 <body>
 <ul>
-<li><a href="http://www.nikhef.nl/~t58/Site/Home.html">webpage</a></li>
+<li>
+<p><a href="http://math.univ-lille1.fr/~kallel/">webpage Lille</a></p>
+</li>
+
+<li>
+<p><a href="https://www.aus.edu/faculty/dr-sadok-kallel">webpage Sharjah</a></p>
+</li>
 </ul>
 
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Gepner+model">Gepner model</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/discrete+torsion">discrete torsion</a></p>
-</li>
+<li><a class="existingWikiWord" href="/nlab/show/configuration+space+%28mathematics%29">configuration space (mathematics)</a></li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
@@ -336,22 +332,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 09:33:06.
-  See the <a href="https://ncatlab.org/nlab/history/Bert Schellekens" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October 29, 2018 at 09:58:05.
+  See the <a href="https://ncatlab.org/nlab/history/Sadok Kallel" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bert+Schellekens" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bert+Schellekens/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Bert+Schellekens" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bert+Schellekens" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Bert Schellekens/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Sadok+Kallel" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Sadok Kallel/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Bert+Schellekens" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Sadok+Kallel" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Bert+Schellekens" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Sadok+Kallel" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Bert+Schellekens" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Sadok+Kallel" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
