--- a/pages/17973.html
+++ b/pages/17973.html
@@ -586,7 +586,13 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/quark">quark</a></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/bottom+quark">bottom quark</a></p>
+</li>
 </ul>
 </li>
 
@@ -602,7 +608,13 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/meson">meson</a></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/pion">pion</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/pion">pion</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/B-meson">B-meson</a></p>
+</li>
 </ul>
 </li>
 
@@ -648,6 +660,10 @@ margin-left: 0em;
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/dual+graviton">dual graviton</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/leptoquark">leptoquark</a></p>
 </li>
 </ul><p><strong><a class="existingWikiWord" href="/nlab/show/auxiliary+fields">auxiliary fields</a></strong></p><ul>
 <li>
@@ -806,6 +822,7 @@ margin-left: 0em;
 <li><a href='#relation_to_mtheory_on_manifolds'>Relation to M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</a></li>
 <li><a href='#Cosmology'>Cosmology</a></li>
 </ul>
+<li><a href='#computer_scan_of_gepnermodel_compactifications'>Computer scan of Gepner-model compactifications</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
@@ -937,6 +954,18 @@ margin-left: 0em;
 
 <p>Since the <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a> of <a class="existingWikiWord" href="/nlab/show/BPS+state">BPS</a> <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> is the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> of <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spaces">anti de Sitter spaces</a> with the unit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-sphere around the brane, the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of intersecting D-brane models realizes the <a class="existingWikiWord" href="/nlab/show/observable+universe">observable universe</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> of an <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a>, or close (see for instance <a href="#Kaloper04">Kaloper 04</a>, <a href="#FlachiMinamitsuji09">Flachi-Minamitsuji 09</a>). The basic structure is hence that of <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+models">Randall-Sundrum models</a></em>, but details may differ.</p>
 
+<h2 id="computer_scan_of_gepnermodel_compactifications">Computer scan of Gepner-model compactifications</h2>
+
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactified</a> with non-geometric <a class="existingWikiWord" href="/nlab/show/fibers">fibers</a> such that the would-be string <a class="existingWikiWord" href="/nlab/show/sigma-models">sigma-models</a> with these <a class="existingWikiWord" href="/nlab/show/target+spaces">target spaces</a> are in fact <a class="existingWikiWord" href="/nlab/show/Gepner+models">Gepner models</a> (in the sense of <em><a href="https://www.physicsforums.com/insights/spectral-standard-model-string-compactifications/">Spectral Standard Model and String Compactifications</a></em>) is in (<a href="#DijkstraHuiszoonSchellekens04a">Dijkstra-Huiszoon-Schellekens 04a</a>, <a href="#DijkstraHuiszoonSchellekens04a">Dijkstra-Huiszoon-Schellekens 04b</a>):</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/SchellekensSuperGepnerModelScanII.jpg" width="600" />
+</center>
+<blockquote>
+<p>A plot of <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model</a>-like <a class="existingWikiWord" href="/nlab/show/coupling+constants">coupling constants</a> in a computer scan of <a class="existingWikiWord" href="/nlab/show/Gepner+model">Gepner model</a>-<a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> according to <a href="#DijkstraHuiszoonSchellekens04b">Dijkstra-Huiszoon-Schellekens 04b</a>.</p>
+
+<p>The blue dot indicates the couplings in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mn>5</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SU(5)</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/GUT">GUT</a> theory. The faint lines are NOT drawn by hand, but reflect increased density of Gepner models as seen by the computer scan.</p>
+</blockquote>
+
 <h2 id="references">References</h2>
 
 <h3 id="general">General</h3>
@@ -1006,6 +1035,18 @@ margin-left: 0em;
 
 <li>
 <p>Anshuman Maharana, <a class="existingWikiWord" href="/nlab/show/Eran+Palti">Eran Palti</a>, <em>Models of Particle Physics from Type IIB String Theory and F-theory: A Review</em> (<a href="http://arxiv.org/abs/1212.0555">arXiv:1212.0555</a>)</p>
+</li>
+</ul>
+
+<p>Computer scan of <a class="existingWikiWord" href="/nlab/show/Gepner+model">Gepner model</a>-<a class="existingWikiWord" href="/nlab/show/KK-compactifications">KK-compactifications</a> of intersecting D-brane models:</p>
+
+<ul>
+<li id="DijkstraHuiszoonSchellekens04a">
+<p>T.P.T. Dijkstra, L. R. Huiszoon, <a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Chiral Supersymmetric Standard Model Spectra from Orientifolds of Gepner Models</em>, Phys.Lett. B609 (2005) 408-417 (<a href="https://arxiv.org/abs/hep-th/0403196">arXiv:hep-th/0403196</a>)</p>
+</li>
+
+<li id="DijkstraHuiszoonSchellekens04b">
+<p>T.P.T. Dijkstra, L. R. Huiszoon, <a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Supersymmetric Standard Model Spectra from RCFT orientifolds</em>, Nucl.Phys.B710:3-57,2005 (<a href="https://arxiv.org/abs/hep-th/0411129">arXiv:hep-th/0411129</a>)</p>
 </li>
 </ul>
 
@@ -1124,14 +1165,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 13:44:41.
+  Last revised on October 29, 2018 at 10:33:21.
   See the <a href="https://ncatlab.org/nlab/history/intersecting D-brane model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/intersecting D-brane model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
