--- a/pages/19727.html
+++ b/pages/19727.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1000,6 +1000,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#results'>Results</a></li>
+<li><a href='#computer_scan_of_gepnermodel_compactifications'>Computer scan of Gepner-model compactifications</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
@@ -1042,6 +1043,18 @@ margin-left: 0em;
 <h2 id="results">Results</h2>
 
 <p>There are some mistakes in the literature. A clean account is in <a href="#FuchsSchweigertWalcher00">Fuchs-Schweigert-Walcher 00</a>, <a href="#FuchsKasteLercheLutkenSchweigert00">Fuchs-Kaste-Lerche-Lutken-Schweigert 00</a></p>
+
+<h2 id="computer_scan_of_gepnermodel_compactifications">Computer scan of Gepner-model compactifications</h2>
+
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactified</a> with non-geometric <a class="existingWikiWord" href="/nlab/show/fibers">fibers</a> such that the would-be string <a class="existingWikiWord" href="/nlab/show/sigma-models">sigma-models</a> with these <a class="existingWikiWord" href="/nlab/show/target+spaces">target spaces</a> are in fact <a class="existingWikiWord" href="/nlab/show/Gepner+models">Gepner models</a> (in the sense of <em><a href="https://www.physicsforums.com/insights/spectral-standard-model-string-compactifications/">Spectral Standard Model and String Compactifications</a></em>) is in (<a href="#DijkstraHuiszoonSchellekens04a">Dijkstra-Huiszoon-Schellekens 04a</a>, <a href="#DijkstraHuiszoonSchellekens04b">Dijkstra-Huiszoon-Schellekens 04b</a>):</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/SchellekensSuperGepnerModelScanII.jpg" width="600" />
+</center>
+<blockquote>
+<p>A plot of <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model</a>-like <a class="existingWikiWord" href="/nlab/show/coupling+constants">coupling constants</a> in a computer scan of <a class="existingWikiWord" href="/nlab/show/Gepner+model">Gepner model</a>-<a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> according to <a href="#DijkstraHuiszoonSchellekens04b">Dijkstra-Huiszoon-Schellekens 04b</a>.</p>
+
+<p>The blue dot indicates the couplings in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mn>5</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SU(5)</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/GUT">GUT</a> theory. The faint lines are NOT drawn by hand, but reflect increased density of Gepner models as seen by the computer scan.</p>
+</blockquote>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -1178,6 +1191,14 @@ margin-left: 0em;
 <p>N. Quiroz, <a class="existingWikiWord" href="/nlab/show/Bogdan+Stefanski">Bogdan Stefanski</a> Jr, <em>Dirichlet Branes on Orientifolds</em>, Phys.Rev. D66 (2002) 026002 (<a href="https://arxiv.org/abs/hep-th/0110041">arXiv:hep-th/0110041</a>)</p>
 </li>
 
+<li id="DijkstraHuiszoonSchellekens04a">
+<p>T.P.T. Dijkstra, L. R. Huiszoon, <a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Chiral Supersymmetric Standard Model Spectra from Orientifolds of Gepner Models</em>, Phys.Lett. B609 (2005) 408-417 (<a href="https://arxiv.org/abs/hep-th/0403196">arXiv:hep-th/0403196</a>)</p>
+</li>
+
+<li id="DijkstraHuiszoonSchellekens04b">
+<p>T.P.T. Dijkstra, L. R. Huiszoon, <a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Supersymmetric Standard Model Spectra from RCFT orientifolds</em>, Nucl.Phys.B710:3-57,2005 (<a href="https://arxiv.org/abs/hep-th/0411129">arXiv:hep-th/0411129</a>)</p>
+</li>
+
 <li id="MMR06">
 <p>Jaydeep Majumder, Subir Mukhopadhyay, Koushik Ray, <em>Fractional Branes in Non-compact Type IIA Orientifolds</em>, JHEP0611:008, 2006 (<a href="https://arxiv.org/abs/hep-th/0602135">arXiv:hep-th/0602135</a>)</p>
 </li>
@@ -1188,14 +1209,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 01:46:35.
+  Last revised on October 29, 2018 at 10:44:49.
   See the <a href="https://ncatlab.org/nlab/history/boundary conformal field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/boundary conformal field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
