--- a/pages/19888.html
+++ b/pages/19888.html
@@ -319,6 +319,10 @@ margin-left: 0em;
 <li>
 <p><a href="https://www.aus.edu/faculty/dr-sadok-kallel">webpage Sharjah</a></p>
 </li>
+
+<li>
+<p><a href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=18622">Mathematics Genealogy page</a></p>
+</li>
 </ul>
 
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
@@ -332,7 +336,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October 29, 2018 at 09:58:05.
+  Created on October 29, 2018 at 10:01:25.
   See the <a href="https://ncatlab.org/nlab/history/Sadok Kallel" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
