--- a/pages/18070.html
+++ b/pages/18070.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_17" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -763,8 +763,9 @@ margin-left: 0em;
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
-<li><a href='#scanning_map_and_relation_to_cohomotopy'>Scanning map and Relation to cohomotopy</a></li>
+<li><a href='#scanning_map_and_cohomotopy'>Scanning map and cohomotopy</a></li>
 <li><a href='#ReferencesInGoodwillieCalculus'>In Goodwillie-calculus</a></li>
+<li><a href='#relation_to_graph_complexes'>Relation to graph complexes</a></li>
 </ul>
 </ul>
 </div>
@@ -1111,7 +1112,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id="scanning_map_and_relation_to_cohomotopy">Scanning map and Relation to cohomotopy</h3>
+<h3 id="scanning_map_and_cohomotopy">Scanning map and cohomotopy</h3>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/scanning+map">scanning map</a> and hence the relation of configuration spaces to <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a> goes back to</p>
 
@@ -1168,20 +1169,28 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Michael+Ching">Michael Ching</a>, <em>Calculus of Functors and Configuration Spaces</em>, Conference on Pure and Applied Topology Isle of Skye, Scotland, 21-25 June, 2005 (<a href="https://www3.amherst.edu/~mching/Work/skye.pdf">pdf</a>)</p>
 </li>
 </ul>
+
+<h3 id="relation_to_graph_complexes">Relation to graph complexes</h3>
+
+<p>Models for the <a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">ordinary cohomology</a> of configuration in terms of <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a> are discussed in</p>
+
+<ul>
+<li id="CamposWillwacher16"><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>A model for configuration spaces of points</em> (<a href="https://arxiv.org/abs/1604.02043">arXiv:1604.02043</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 10:05:20.
+  Last revised on October 29, 2018 at 11:32:52.
   See the <a href="https://ncatlab.org/nlab/history/configuration space (mathematics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space (mathematics)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
