--- a/pages/4700.html
+++ b/pages/4700.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1807/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1807/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -684,11 +684,12 @@ margin-left: 0em;
 <ul>
 <li><a href='#algebra_structure'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>L</mi> <mn>∞</mn></msub></mrow><annotation encoding="application/x-tex">L_\infty</annotation></semantics></math>-algebra structure</a></li>
 <li><a href='#relation_to_grothendieckteichmller_group_and_deformation_quantization'>Relation to Grothendieck-Teichmüller group and deformation quantization</a></li>
+<li><a href='#RelationToConfigurationSpaces'>Relation to configuration spaces</a></li>
 </ul>
-<li><a href='#applications'>Applications</a></li>
+<li><a href='#further_applications'>Further applications</a></li>
 <li><a href='#generalizations'>Generalizations</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
-<li><a href='#literature'>Literature</a></li>
+<li><a href='#references'>References</a></li>
 </ul>
 </div>
 
@@ -727,7 +728,11 @@ margin-left: 0em;
 
 <p>See at <em><a href="Grothendieck-Teichm%C3%BCller+tower#RelationToTheGraphComplex">Grothendieck-Teichmüller group – relation to the graph complex</a></em>.</p>
 
-<h2 id="applications">Applications</h2>
+<h3 id="RelationToConfigurationSpaces">Relation to configuration spaces</h3>
+
+<p>The system of graph complexes is <a class="existingWikiWord" href="/nlab/show/quasi-isomorphism">quasi-isomorphic</a> to the <a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">real cohomology</a> of <a class="existingWikiWord" href="/nlab/show/configuration+space+%28mathematics%29">configuration spaces</a> (<a href="#CamposWillwacher16">Campos-Willwacher 16, theorem 1</a>).</p>
+
+<h2 id="further_applications">Further applications</h2>
 
 <p>…moduli spaces</p>
 
@@ -759,7 +764,7 @@ margin-left: 0em;
 
 <p><a class="existingWikiWord" href="/nlab/show/formal+noncommutative+symplectic+geometry">formal noncommutative symplectic geometry</a></p>
 
-<h2 id="literature">Literature</h2>
+<h2 id="references">References</h2>
 
 <ul>
 <li>
@@ -836,20 +841,26 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Alastair+Hamilton">Alastair Hamilton</a>, <a class="existingWikiWord" href="/nlab/show/Andrey+Lazarev">Andrey Lazarev</a>, <em>Graph cohomology classes in the <a class="existingWikiWord" href="/nlab/show/BV-BRST+formalism">Batalin-Vilkovisky formalism</a></em>, J.Geom.Phys. <strong>59</strong>:555-575, 2009, <a href="http://arxiv.org/abs/math/0701825">arxiv/0701825</a></p>
 </li>
 </ul>
+
+<p>Relation to <a class="existingWikiWord" href="/nlab/show/configuration+space+%28mathematics%29">configuration spaces</a>:</p>
+
+<ul>
+<li id="CamposWillwacher16"><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>A model for configuration spaces of points</em> (<a href="https://arxiv.org/abs/1604.02043">arXiv:1604.02043</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 08:34:31.
+  Last revised on October 29, 2018 at 11:32:34.
   See the <a href="https://ncatlab.org/nlab/history/graph homology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/graph+homology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graph+homology/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/graph+homology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graph+homology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/graph+homology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graph+homology/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/graph+homology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graph+homology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/graph homology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
