--- a/pages/19891.html
+++ b/pages/19891.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Initiality Project - References in nLab
+      Initiality Project - BibTeX database in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Initiality Project - References
+      Initiality Project - BibTeX database
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9207/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9209/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -314,32 +314,47 @@ margin-left: 0em;
 <h2 id="primary_sources">Primary sources</h2>
 
 <ol>
-<li id="streicher_semantics-of-type-theory_1991">Streicher, Thomas, <em>Semantics of type theory</em>, Correctness, completeness and independence results, With a foreword by Martin Wirsing, Progress in Theoretical Computer Science, Birkhäuser Boston, Inc., Boston, MA, 1991, xii+298 pp., ISBN: 0-8176-3594-7, DOI: <a href="https://doi.org/10.1007/978-1-4612-0433-6">10.1007/978-1-4612-0433-6</a>, <a href="https://dl.acm.org/citation.cfm?id=121358">ACM</a>, <a href="/nlab/show/Initiality+Project+-+BibTeX+database#streicher_semantics-of-type-theory_1991">BibTeX entry</a>, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=1134134">MR</a>.
-<p>This book was suggested by Mike Shulman, in an <a href="https://nforum.ncatlab.org/discussion/8904/a-communal-proof-of-an-initiality-theorem/?Focus=71137#Comment_71137">nForum message</a>, as a primary reference for the <a class="existingWikiWord" href="/nlab/show/Initiality+Project">Initiality Project</a>.</p>
-</li>
+<li id="streicher_semantics-of-type-theory_1991"></li>
 </ol>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
+
+<pre><code>@book {MR1134134,
+    AUTHOR = {Streicher, Thomas},
+     TITLE = {Semantics of type theory},
+    SERIES = {Progress in Theoretical Computer Science},
+      NOTE = {Correctness, completeness and independence results,
+              With a foreword by Martin Wirsing},
+ PUBLISHER = {Birkh\"{a}user Boston, Inc., Boston, MA},
+      YEAR = {1991},
+     PAGES = {xii+298},
+      ISBN = {0-8176-3594-7},
+   MRCLASS = {68Q55 (03B40 03B70 03F50 06B35 68Q65)},
+  MRNUMBER = {1134134},
+MRREVIEWER = {John C. Mitchell},
+       DOI = {10.1007/978-1-4612-0433-6},
+       URL = {https://doi.org/10.1007/978-1-4612-0433-6},
+}</code></pre>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 15:32:43.
-  See the <a href="https://ncatlab.org/nlab/history/Initiality Project - References" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October 29, 2018 at 15:59:44.
+  See the <a href="https://ncatlab.org/nlab/history/Initiality Project - BibTeX database" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Initiality Project - References/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Initiality Project - BibTeX database/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Initiality+Project+-+References" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Initiality+Project+-+BibTeX+database" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Initiality+Project+-+References" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Initiality+Project+-+BibTeX+database" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Initiality+Project+-+References" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Initiality+Project+-+BibTeX+database" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
