--- a/pages/19890.html
+++ b/pages/19890.html
@@ -314,7 +314,7 @@ margin-left: 0em;
 <h2 id="primary_sources">Primary sources</h2>
 
 <ol>
-<li id="streicher_semantics-of-type-theory_1991">Streicher, Thomas, <em>Semantics of type theory</em>, Correctness, completeness and independence results, With a foreword by Martin Wirsing, Progress in Theoretical Computer Science, Birkhäuser Boston, Inc., Boston, MA, 1991, xii+298 pp., ISBN: 0-8176-3594-7, DOI: <a href="https://doi.org/10.1007/978-1-4612-0433-6">10.1007/978-1-4612-0433-6</a>, <a href="https://dl.acm.org/citation.cfm?id=121358">ACM</a>, <a href="/nlab/show/Initiality+Project+-+BibTeX+database#streicher_semantics-of-type-theory_1991">BibTeX entry</a>, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=1134134">MR</a>.
+<li id="streicher_1991_semantics-of-type-theory">Thomas Streicher, <em>Semantics of type theory</em>, Correctness, completeness and independence results, With a foreword by Martin Wirsing, Progress in Theoretical Computer Science, Birkhäuser Boston, Inc., Boston, MA, 1991, xii+298 pp., ISBN: 0-8176-3594-7, DOI: <a href="https://doi.org/10.1007/978-1-4612-0433-6">10.1007/978-1-4612-0433-6</a>, <a href="https://dl.acm.org/citation.cfm?id=121358">ACM</a>, <a href="/nlab/show/Initiality+Project+-+BibTeX+database#streicher_1991_semantics-of-type-theory">BibTeX entry</a>, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=1134134">MR</a>.
 <p>This book was suggested by Mike Shulman, in an <a href="https://nforum.ncatlab.org/discussion/8904/a-communal-proof-of-an-initiality-theorem/?Focus=71137#Comment_71137">nForum message</a>, as a primary reference for the <a class="existingWikiWord" href="/nlab/show/Initiality+Project">Initiality Project</a>.</p>
 </li>
 </ol>
@@ -324,14 +324,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 15:32:43.
+  Last revised on October 29, 2018 at 16:33:57.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - References" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - References/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
