--- a/pages/19891.html
+++ b/pages/19891.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9209/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9209/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -314,32 +314,32 @@ margin-left: 0em;
 <h2 id="primary_sources">Primary sources</h2>
 
 <ol>
-<li id="streicher_semantics-of-type-theory_1991"></li>
-</ol>
-
-<pre><code>@book {MR1134134,
-    AUTHOR = {Streicher, Thomas},
-     TITLE = {Semantics of type theory},
-    SERIES = {Progress in Theoretical Computer Science},
-      NOTE = {Correctness, completeness and independence results,
-              With a foreword by Martin Wirsing},
- PUBLISHER = {Birkh\"{a}user Boston, Inc., Boston, MA},
-      YEAR = {1991},
-     PAGES = {xii+298},
-      ISBN = {0-8176-3594-7},
-   MRCLASS = {68Q55 (03B40 03B70 03F50 06B35 68Q65)},
-  MRNUMBER = {1134134},
+<li id="streicher_1991_semantics-of-type-theory">BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#streicher_1991_semantics-of-type-theory">this reference</a>.
+<pre><code>@book {streicher_1991_semantics-of-type-theory,
+AUTHOR = {Streicher, Thomas},
+TITLE = {Semantics of type theory},
+SERIES = {Progress in Theoretical Computer Science},
+NOTE = {Correctness, completeness and independence results,
+With a foreword by Martin Wirsing},
+PUBLISHER = {Birkh\"{a}user Boston, Inc., Boston, MA},
+YEAR = {1991},
+PAGES = {xii+298},
+ISBN = {0-8176-3594-7},
+MRCLASS = {68Q55 (03B40 03B70 03F50 06B35 68Q65)},
+MRNUMBER = {1134134},
 MRREVIEWER = {John C. Mitchell},
-       DOI = {10.1007/978-1-4612-0433-6},
-       URL = {https://doi.org/10.1007/978-1-4612-0433-6},
+DOI = {10.1007/978-1-4612-0433-6},
+URL = {https://doi.org/10.1007/978-1-4612-0433-6},
 }</code></pre>
-</body></html>
+</li>
+</ol>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on October 29, 2018 at 15:59:44.
+  Created on October 29, 2018 at 16:58:14.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - BibTeX database" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
