--- a/pages/1788.html
+++ b/pages/1788.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -554,6 +554,8 @@ g_{i}u = g_{j}u &amp;\vdash \bot\quad \text{for all pairs}\;g_i\neq g_j\quad\tex
 </ul>
 
 <p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+BibTeX+database">Initiality Project - BibTeX database</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Thomas+Streicher">Thomas Streicher</a></p>
 <div class="footnotes"><hr /><ol><li id="fn:1">
 <p>Looking at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝕋</mi> <mi>G</mi></msub></mrow><annotation encoding="application/x-tex">\mathbb{T}_G</annotation></semantics></math> it seems reasonable to conjecture that the toposes of <em>finite</em> group actions correspond precisely to the classifying toposes of the finitely presentable complete Boolean theories of presheaf type i.e. those with finitely many function symbols and a finite list of axioms. <a href="#fnref:1" rev="footnote">↩</a></p>
 </li></ol></div></body></html>
@@ -562,14 +564,14 @@ g_{i}u = g_{j}u &amp;\vdash \bot\quad \text{for all pairs}\;g_i\neq g_j\quad\tex
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 15:55:09.
+  Last revised on October 30, 2018 at 01:58:00.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1708" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1708 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1709" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1709 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
