--- a/pages/19890.html
+++ b/pages/19890.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9207/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9207/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,29 +309,37 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Primary sources</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<h2 id="primary_sources">Primary sources</h2>
+<p><strong>S</strong></p>
 
-<ol>
-<li id="streicher_1991_semantics-of-type-theory">Thomas Streicher, <em>Semantics of type theory</em>, Correctness, completeness and independence results, With a foreword by Martin Wirsing, Progress in Theoretical Computer Science, Birkhäuser Boston, Inc., Boston, MA, 1991, xii+298 pp., ISBN: 0-8176-3594-7, DOI: <a href="https://doi.org/10.1007/978-1-4612-0433-6">10.1007/978-1-4612-0433-6</a>, <a href="https://dl.acm.org/citation.cfm?id=121358">ACM</a>, <a href="/nlab/show/Initiality+Project+-+BibTeX+database#streicher_1991_semantics-of-type-theory">BibTeX entry</a>, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=1134134">MR</a>.
+<dl>
+<dt id="streicher_1991_semantics-of-type-theory"> <a class="existingWikiWord" href="/nlab/show/Thomas+Streicher">Thomas Streicher</a></dt>
+
+<dd>
+<p><em>Semantics of type theory</em> Correctness, completeness and independence results</p>
+
+<p>With a foreword by Martin Wirsing, Progress in Theoretical Computer Science, Birkhäuser Boston, Inc., Boston, MA, 1991, xii+298 pp., ISBN: 0-8176-3594-7</p>
+
+<p>DOI <a href="https://doi.org/10.1007/978-1-4612-0433-6">10.1007/978-1-4612-0433-6</a>, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=1134134">MR</a>, <a href="/nlab/show/Initiality+Project+-+BibTeX+database#streicher_1991_semantics-of-type-theory">BibTeX</a></p>
+
 <p>This book was suggested by Mike Shulman, in an <a href="https://nforum.ncatlab.org/discussion/8904/a-communal-proof-of-an-initiality-theorem/?Focus=71137#Comment_71137">nForum message</a>, as a primary reference for the <a class="existingWikiWord" href="/nlab/show/Initiality+Project">Initiality Project</a>.</p>
-</li>
-</ol>
+</dd>
+</dl>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 16:33:57.
+  Last revised on October 30, 2018 at 01:59:40.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - References" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - References/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
