--- a/pages/17973.html
+++ b/pages/17973.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -821,8 +821,8 @@ margin-left: 0em;
 <li><a href='#IntersectionOfD6WithO8'>Intersections of D6s with D8/O8s</a></li>
 <li><a href='#relation_to_mtheory_on_manifolds'>Relation to M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</a></li>
 <li><a href='#Cosmology'>Cosmology</a></li>
-</ul>
 <li><a href='#computer_scan_of_gepnermodel_compactifications'>Computer scan of Gepner-model compactifications</a></li>
+</ul>
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
@@ -954,7 +954,7 @@ margin-left: 0em;
 
 <p>Since the <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a> of <a class="existingWikiWord" href="/nlab/show/BPS+state">BPS</a> <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> is the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> of <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spaces">anti de Sitter spaces</a> with the unit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-sphere around the brane, the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of intersecting D-brane models realizes the <a class="existingWikiWord" href="/nlab/show/observable+universe">observable universe</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> of an <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a>, or close (see for instance <a href="#Kaloper04">Kaloper 04</a>, <a href="#FlachiMinamitsuji09">Flachi-Minamitsuji 09</a>). The basic structure is hence that of <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+models">Randall-Sundrum models</a></em>, but details may differ.</p>
 
-<h2 id="computer_scan_of_gepnermodel_compactifications">Computer scan of Gepner-model compactifications</h2>
+<h3 id="computer_scan_of_gepnermodel_compactifications">Computer scan of Gepner-model compactifications</h3>
 
 <p>Discussion of <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactified</a> with non-geometric <a class="existingWikiWord" href="/nlab/show/fibers">fibers</a> such that the would-be string <a class="existingWikiWord" href="/nlab/show/sigma-models">sigma-models</a> with these <a class="existingWikiWord" href="/nlab/show/target+spaces">target spaces</a> are in fact <a class="existingWikiWord" href="/nlab/show/Gepner+models">Gepner models</a> (in the sense of <em><a href="https://www.physicsforums.com/insights/spectral-standard-model-string-compactifications/">Spectral Standard Model and String Compactifications</a></em>) is in (<a href="#DijkstraHuiszoonSchellekens04a">Dijkstra-Huiszoon-Schellekens 04a</a>, <a href="#DijkstraHuiszoonSchellekens04a">Dijkstra-Huiszoon-Schellekens 04b</a>):</p>
 <center>
@@ -1165,14 +1165,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 10:33:21.
+  Last revised on October 30, 2018 at 02:29:32.
   See the <a href="https://ncatlab.org/nlab/history/intersecting D-brane model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/intersecting D-brane model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
