--- a/pages/1241.html
+++ b/pages/1241.html
@@ -903,7 +903,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#RelationToProtonDecay'>Relation to proton decay</a></li>
 <li><a href='#relation_to_neutrino_masses'>Relation to neutrino masses</a></li>
-<li><a href='#occurrence_in_string_phenomenology'>Occurrence in string phenomenology</a></li>
+<li><a href='#InStringPhenomenology'>Occurrence in string phenomenology</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#References'>References</a></li>
@@ -985,9 +985,9 @@ margin-left: 0em;
 
 <p>The high energy scale required by a <a class="existingWikiWord" href="/nlab/show/seesaw+mechanism">seesaw mechanism</a> to produce the experimentally observer <a class="existingWikiWord" href="/nlab/show/neutrino">neutrino</a> masses happens to be about the conventional GUT scale, for review see for instance (<a href="#Mohapatra06">Mohapatra 06</a>).</p>
 
-<h3 id="occurrence_in_string_phenomenology">Occurrence in string phenomenology</h3>
+<h3 id="InStringPhenomenology">Occurrence in string phenomenology</h3>
 
-<p>s Discussion of <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactified</a> with non-geometric <a class="existingWikiWord" href="/nlab/show/fibers">fibers</a> such that the would-be string <a class="existingWikiWord" href="/nlab/show/sigma-models">sigma-models</a> with these <a class="existingWikiWord" href="/nlab/show/target+spaces">target spaces</a> are in fact <a class="existingWikiWord" href="/nlab/show/Gepner+models">Gepner models</a> (in the sense of <em><a href="https://www.physicsforums.com/insights/spectral-standard-model-string-compactifications/">Spectral Standard Model and String Compactifications</a></em>) is in (<a href="#DijkstraHuiszoonSchellekens04a">Dijkstra-Huiszoon-Schellekens 04a</a>, <a href="#DijkstraHuiszoonSchellekens04b">Dijkstra-Huiszoon-Schellekens 04b</a>):</p>
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactified</a> with non-geometric <a class="existingWikiWord" href="/nlab/show/fibers">fibers</a> such that the would-be string <a class="existingWikiWord" href="/nlab/show/sigma-models">sigma-models</a> with these <a class="existingWikiWord" href="/nlab/show/target+spaces">target spaces</a> are in fact <a class="existingWikiWord" href="/nlab/show/Gepner+models">Gepner models</a> (in the sense of <em><a href="https://www.physicsforums.com/insights/spectral-standard-model-string-compactifications/">Spectral Standard Model and String Compactifications</a></em>) is in (<a href="#DijkstraHuiszoonSchellekens04a">Dijkstra-Huiszoon-Schellekens 04a</a>, <a href="#DijkstraHuiszoonSchellekens04b">Dijkstra-Huiszoon-Schellekens 04b</a>):</p>
 <center>
 <img src="https://ncatlab.org/nlab/files/SchellekensSuperGepnerModelScanII.jpg" width="600" />
 </center>
@@ -1170,14 +1170,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 10:45:07.
+  Last revised on October 30, 2018 at 02:31:50.
   See the <a href="https://ncatlab.org/nlab/history/GUT" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/GUT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/GUT/34" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(34 revisions)</span> | <a href="/nlab/show/diff/GUT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/GUT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/GUT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/GUT/35" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(35 revisions)</span> | <a href="/nlab/show/diff/GUT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/GUT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/GUT/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
