--- a/pages/19891.html
+++ b/pages/19891.html
@@ -309,44 +309,42 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Primary sources</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<h2 id="primary_sources">Primary sources</h2>
+<p><strong>S</strong></p>
 
-<ol>
-<li id="streicher_1991_semantics-of-type-theory">BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#streicher_1991_semantics-of-type-theory">this reference</a>.
+<p id="streicher_1991_semantics-of-type-theory"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#streicher_1991_semantics-of-type-theory">this reference</a>:</p>
+
 <pre><code>@book {streicher_1991_semantics-of-type-theory,
-AUTHOR = {Streicher, Thomas},
-TITLE = {Semantics of type theory},
-SERIES = {Progress in Theoretical Computer Science},
-NOTE = {Correctness, completeness and independence results,
-With a foreword by Martin Wirsing},
-PUBLISHER = {Birkh\"{a}user Boston, Inc., Boston, MA},
-YEAR = {1991},
-PAGES = {xii+298},
-ISBN = {0-8176-3594-7},
-MRCLASS = {68Q55 (03B40 03B70 03F50 06B35 68Q65)},
-MRNUMBER = {1134134},
+    AUTHOR = {Streicher, Thomas},
+     TITLE = {Semantics of type theory},
+    SERIES = {Progress in Theoretical Computer Science},
+      NOTE = {Correctness, completeness and independence results,
+              With a foreword by Martin Wirsing},
+ PUBLISHER = {Birkh\"{a}user Boston, Inc., Boston, MA},
+      YEAR = {1991},
+     PAGES = {xii+298},
+      ISBN = {0-8176-3594-7},
+   MRCLASS = {68Q55 (03B40 03B70 03F50 06B35 68Q65)},
+  MRNUMBER = {1134134},
 MRREVIEWER = {John C. Mitchell},
-DOI = {10.1007/978-1-4612-0433-6},
-URL = {https://doi.org/10.1007/978-1-4612-0433-6},
+       DOI = {10.1007/978-1-4612-0433-6},
+       URL = {https://doi.org/10.1007/978-1-4612-0433-6},
 }</code></pre>
-</li>
-</ol>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on October 29, 2018 at 17:45:17.
+  Last revised on October 30, 2018 at 02:38:59.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - BibTeX database" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+BibTeX+database/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Initiality+Project+-+BibTeX+database" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+BibTeX+database" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - BibTeX database/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
